samples/_failures_safe/1761467873_8c0e5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c4a1837.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_5c4a1837.c:170:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  170 |         const char* type
      |         ^~~~~
./samples/SAFE/__tmp_5c4a1837.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c4a1837.c:170:9: error: expected declaration or statement at end of input
